# TestCuda

./: .gitignore  CMakeLists.txt  main.cu
